<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity2">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DetailActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="419dp"
                android:layout_height="65dp"
                android:background="#000000"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="173dp"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/logo" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="13dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/date_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/tmonmonsori"
                    android:text="@string/date"
                    android:textColor="@color/black"
                    android:textSize="15dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.088"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/linearLayout" />
            </LinearLayout>

            <ImageView
                android:id="@+id/menu_image"
                android:layout_width="400dp"
                android:layout_height="400dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/image_empty" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="13dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/food_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:layout_constraintTop_toBottomOf="@+id/date_text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="13dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/type_image"
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="2dp"
                    app:srcCompat="@drawable/type" />

                <TextView
                    android:id="@+id/type_text"
                    android:layout_width="23dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/tmonmonsori"
                    android:paddingLeft="7dp"
                    android:paddingTop="5dp"
                    android:paddingRight="7dp"
                    android:text="@string/type"
                    android:textColor="@color/black"
                    android:textSize="15dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="13dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/time_image"
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="2dp"
                    app:srcCompat="@drawable/time" />

                <TextView
                    android:id="@+id/time_text"
                    android:layout_width="23dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/tmonmonsori"
                    android:paddingLeft="7dp"
                    android:paddingTop="5dp"
                    android:paddingRight="7dp"
                    android:text="@string/time"
                    android:textColor="@color/black"
                    android:textSize="15dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="13dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/name_image"
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="2dp"
                    app:srcCompat="@drawable/name" />

                <TextView
                    android:id="@+id/name_text"
                    android:layout_width="23dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/tmonmonsori"
                    android:paddingLeft="7dp"
                    android:paddingTop="5dp"
                    android:paddingRight="7dp"
                    android:text="@string/name"
                    android:textColor="@color/black"
                    android:textSize="15dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="13dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/num_image"
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="2dp"
                    app:srcCompat="@drawable/number" />

                <TextView
                    android:id="@+id/num_text"
                    android:layout_width="23dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/tmonmonsori"
                    android:paddingLeft="7dp"
                    android:paddingTop="5dp"
                    android:paddingRight="7dp"
                    android:text="@string/kcal"
                    android:textColor="@color/black"
                    android:textSize="15dp" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="13dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/money_image_text"
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="2dp"
                    app:srcCompat="@drawable/money" />

                <TextView
                    android:id="@+id/priceText"
                    android:layout_width="23dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/tmonmonsori"
                    android:paddingLeft="7dp"
                    android:paddingTop="5dp"
                    android:paddingRight="7dp"
                    android:text="@string/money"
                    android:textColor="@color/black"
                    android:textSize="15dp" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="13dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/place_image_text_revision"
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="2dp"
                    app:srcCompat="@drawable/place" />

                <TextView
                    android:id="@+id/place_text_revision"
                    android:layout_width="23dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/tmonmonsori"
                    android:paddingLeft="7dp"
                    android:paddingTop="5dp"
                    android:paddingRight="7dp"
                    android:text="@string/place"
                    android:textColor="@color/black"
                    android:textSize="15dp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="13dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/review_image"
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="2dp"
                    app:srcCompat="@drawable/review" />

                <TextView
                    android:id="@+id/review_text"
                    android:layout_width="23dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/tmonmonsori"
                    android:paddingLeft="7dp"
                    android:paddingTop="5dp"
                    android:paddingRight="7dp"
                    android:text="@string/review"
                    android:textColor="@color/black"
                    android:textSize="15dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:layout_marginBottom="13dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <ImageButton
                    android:id="@+id/revise_button"
                    android:layout_width="90dp"
                    android:layout_height="26dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:padding="0sp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/revise"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <ImageButton
                    android:id="@+id/check_button"
                    android:layout_width="90dp"
                    android:layout_height="26dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:padding="0sp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/button5"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    app:srcCompat="@drawable/checkbutton" />

                <ImageButton
                    android:id="@+id/delete_button"
                    android:layout_width="90dp"
                    android:layout_height="26dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:padding="0sp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/delete"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintVertical_bias="0.0" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>